Codes/azure-vm-via-exec/6-nic.tf
resource "azurerm_network_interface" "this" {
  name                = "vm-nic"
  location            = azurerm_resource_group.this.location
  resource_group_name = azurerm_resource_group.this.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.this.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id = azurerm_public_ip.this.id
  }
}

resource "azurerm_network_interface_security_group_association" "this" {
    network_interface_id = azurerm_network_interface.this.id
    network_security_group_id = azurerm_network_security_group.this.id
}
